fix banner alignment

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,8 @@ img {
   height: auto
   z-index: 0;
   position: relative;
+  display: grid;
+  justify-items: center;
 }
 .banner-text {
   position: absolute;
